--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
 
     steps:
       - name: Checkout repo
@@ -19,18 +20,18 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Crear archivo cordova.variables.gradle vacío
+      - name: Ensure placeholder files for Capacitor/Cordova
         run: |
           mkdir -p android/capacitor-cordova-android-plugins
-          echo "// generado automáticamente" > android/capacitor-cordova-android-plugins/cordova.variables.gradle
+          echo "// placeholder" > android/capacitor-cordova-android-plugins/cordova.variables.gradle
 
       - name: Build APK
         working-directory: android
         run: |
           chmod +x ./gradlew
-          ./gradlew assembleRelease
+          ./gradlew --no-daemon assembleRelease
 
-      - name: Upload APK
+      - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: wikirol-apk
