Corrige error de compilación: fuerza --release 17

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -24,6 +24,10 @@ allprojects {
     }
 }
 
+tasks.withType(JavaCompile).configureEach {
+    options.release = 17
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
