--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,18 +18,16 @@ jobs:
           distribution: temurin
           java-version: '17'
 
-      - name: Install Android SDK
-        run: |
-          mkdir -p $HOME/android-sdk/cmdline-tools
-          cd $HOME/android-sdk
-          wget https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip
-          unzip -q commandlinetools-linux-*.zip
-          mkdir -p cmdline-tools/latest
-          mv cmdline-tools/* cmdline-tools/latest/
-          yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --sdk_root=$HOME/android-sdk "platform-tools" "platforms;android-35" "build-tools;34.0.0"
-        env:
-          ANDROID_SDK_ROOT: $HOME/android-sdk
-
+- name: Install Android SDK
+  run: |
+    mkdir -p $HOME/android-sdk/cmdline-tools
+    cd $HOME/android-sdk
+    wget https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip
+    unzip -q commandlinetools-linux-*.zip -d cmdline-tools/tmp
+    mv cmdline-tools/tmp/cmdline-tools cmdline-tools/latest
+    yes | cmdline-tools/latest/bin/sdkmanager --sdk_root=$HOME/android-sdk "platform-tools" "platforms;android-35" "build-tools;34.0.0"
+  env:
+    ANDROID_SDK_ROOT: $HOME/android-sdk
       - name: Build APK
         run: ./gradlew assembleRelease
 
