--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,8 +8,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    env:
+      ANDROID_SDK_ROOT: $HOME/android-sdk
+
     steps:
-      - name: Checkout
+      - name: Checkout project
         uses: actions/checkout@v4
 
       - name: Set up JDK
@@ -18,16 +22,15 @@ jobs:
           distribution: temurin
           java-version: '17'
 
-- name: Install Android SDK
-  run: |
-    mkdir -p $HOME/android-sdk/cmdline-tools
-    cd $HOME/android-sdk
-    wget https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip
-    unzip -q commandlinetools-linux-*.zip -d cmdline-tools/tmp
-    mv cmdline-tools/tmp/cmdline-tools cmdline-tools/latest
-    yes | cmdline-tools/latest/bin/sdkmanager --sdk_root=$HOME/android-sdk "platform-tools" "platforms;android-35" "build-tools;34.0.0"
-  env:
-    ANDROID_SDK_ROOT: $HOME/android-sdk
+      - name: Install Android SDK
+        run: |
+          mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
+          cd $ANDROID_SDK_ROOT
+          wget https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip
+          unzip -q commandlinetools-linux-*.zip -d cmdline-tools/tmp
+          mv cmdline-tools/tmp/cmdline-tools cmdline-tools/latest
+          yes | cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platform-tools" "platforms;android-35" "build-tools;34.0.0"
+
       - name: Build APK
         run: ./gradlew assembleRelease
 
